tests/NormalTests/paczka1/small_fuzzy/19964377.err
Error in line 4: A250 A250 35,93
Error in line 2: A250 A938 98,2
